updated contents of last section and sign up

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         </div>
       </section>
       <section class="sec-2">
-        <h1>About</h1>
         <div class="secDiv-2">
+          <h1>About</h1>
+          <hr />
           <p>
             As the city that never sleeps and famous for its high-end malls and
             lucrative streets. Mumbai City also known as Bombay, offers unique
@@ -76,6 +77,7 @@
       <section class="sec-3">
         <div class="secDiv-2">
           <h1>Must Visit Places</h1>
+          <hr />
           <p>
             In terms of architecture, Mumbai exhibits one of the complexes,
             luxurious and outstanding architecture. Some include the Pristine
@@ -122,7 +124,7 @@
               alt="Sanjay Gandhi National Park"
               class="resize"
             />
-            <figcaption>Sanjay Gandhi National Park</figcaption>
+            <figcaption>National Park</figcaption>
           </figure>
           <figure>
             <img
@@ -145,6 +147,7 @@
       <section class="sec-4">
         <div class="secDiv-2">
           <h1>Festivals of Mumbai</h1>
+          <hr />
           <p>
             Mumbai, known as “the city that never sleeps,” is a diverse city and
             one of the busiest cities in India. Festivals form an important part
@@ -152,83 +155,126 @@
           </p>
           <ol>
             <li>
-              Banganga Festival: It is basically a musical show. The festival’s
-              purpose is to promote Maharashtra’s culture. Different artists
-              come from different parts of the country.
+              <span class="cap">Gudhi Padwa Festival</span>🥥🥻🚪 : It marks the
+              beginning of the Hindi year. This festival is celebrated
+              throughout the state of Maharashtra,as it is considered like the
+              New Year celebration.
             </li>
             <li>
-              Elephants Festival: It is organized in Elephanta caves. Musicians
-              and dancers from all over India participate in the festival.
+              <span class="cap">Ganesh Chaturthi Festival</span>🙏🏻🌼 🪔 🐘 🪔
+              🌼🙏🏻 : The most important festival of Maharashtra. It is a
+              celebration of the birth anniversary of Lord Ganesha, the
+              Elephant-God.
             </li>
             <li>
-              Gudhi Padwa Festival: It marks the beginning of the Hindi year.
-              This festival is celebrated throughout the state of Maharashtra,as
-              it is considered like the New Year celebration. People hang bamboo
-              stuff (gudhi) on the entrance of their houses, as it is believed
-              that gudhi provide protection from evil forces.
+              <span class="cap">Diwali Festival</span>✨✨✨🌸 🪔🪔🪔 🌸✨✨✨ :
+              It is one of the major festivals of Hindus. It presents the
+              victory of good over bad. It is believed that Diwali festival is
+              celebrated on the day that Lord Rama killed the demon king Ravana,
+              completed his fourteen days of exile and returned to his kingdom.
             </li>
             <li>
-              Ganesh Chaturthi Festival: The most important festival of
-              Maharashtra. It is a celebration of the birth anniversary of Lord
-              Ganesha, the Elephant-God. The people celebrate this festival by
-              bringing an idol of the lord to their homes, decorated and worship
-              it. The festival comes to an end by carrying the idol in a huge
-              procession to the sea and immersing it in the water, amidst drum
-              beats, songs and dancing.
+              <span class="cap">Holi Festival</span> 💦 🎨 🌈 : There is nothing
+              like Holi celebrations in Mumbai! The vibrant colours,
+              lip-smacking food, live peppy DJ performances and unlimited fun
+              can be collectively synonymous with Holi, one of the famous
+              festivals of Mumbai.
             </li>
             <li>
-              Diwali Festival: It is one of the major festivals of Hindus. It
-              presents the victory of good over bad. It is believed that Diwali
-              festival is celebrated on the day that Lord Rama killed the demon
-              king Ravana, completed his fourteen days of exile and returned to
-              his kingdom. On this day, people worship Lord Ganesha and Goddess
-              Lakshmi and seek their blessings. People clean their houses and
-              decorate them with lights and flowers. People also burn crackers
-              and fireworks and pray for a flourishing new year.
+              <span class="cap"> Janmashtami Festival</span>
+              🎊🍯🍯💢🎊: This Mumbai Govinda festival is one of the highly
+              celebrated Mumbai festivals by the Hindus every year on the day
+              after Janmashtami to mimic the stealing of butter by Lord Krishna
+              himself.
+            </li>
+            <li>
+              <span class="cap"> Mumbai Film Festival</span> 🎞 🎬 🎬 🎥 : The
+              Jio MAMI (Mumbai Academy of Moving Image) Mumbai Film Festival
+              with Star works on a vision of offering the best of world cinemas
+              to the people of Mumbai and offering the best of Indian cinema to
+              the world.
+            </li>
+            <li>
+              <span class="cap"> Kala Ghoda Arts Festival</span>🎨 👩🏻‍🎨 🖌 🖼 🎭 :
+              The Kala Ghoda Arts Festival is a cultural festival, nine days
+              long.It is a celebration of various forms of dance, art, music and
+              theatre. Some of the top activities to enjoy here are shopping,
+              visiting art galleries, taking part in dance and music
+              performances and seminars.
             </li>
           </ol>
+          <img
+            src="./src/img/many-colorful-festivals.jpeg"
+            alt=""
+            class="about-img"
+            width="800px"
+          />
         </div>
       </section>
       <section class="sec-5">
-        <h1>Top Street Shopping in Mumbai:</h1>
-        <table>
-          <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-          </tr>
-          <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-          </tr>
-          <tr>
-            <td>Centro comercial Moctezuma</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-          </tr>
-          <tr>
-            <td>Ernst Handel</td>
-            <td>Roland Mendel</td>
-            <td>Austria</td>
-          </tr>
-          <tr>
-            <td>Island Trading</td>
-            <td>Helen Bennett</td>
-            <td>UK</td>
-          </tr>
-          <tr>
-            <td>Laughing Bacchus Winecellars</td>
-            <td>Yoshi Tannamuri</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Magazzini Alimentari Riuniti</td>
-            <td>Giovanni Rovelli</td>
-            <td>Italy</td>
-          </tr>
-        </table>
+        <div class="secDiv-2">
+          <h1>Top Street Shopping in Mumbai:</h1>
+          <hr />
+          <div class="shopDiv" id="grid">
+            <figure class="figShop">
+              <img
+                src="./src/img/street-vendor-series-colaba-mumbai-street-vendor-s-selling-ethnic-indian-jewellery-to-tourists-colaba-causeway-colaba-mumbai-143589197.jpeg"
+                alt="Colaba Causeway"
+                class="shopImg"
+              />
+              <figcaption>Colaba Causeway</figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./src/img/fashion-street-in-Mumbai.jpeg"
+                alt="Fashion Street"
+                class="shopImg"
+              />
+              <figcaption>Fashion Street</figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./src/img/1476535224_1476534923_1453826508_bl21_it_eshop_2213769f.jpeg"
+                alt="Lamington Road"
+                class="shopImg"
+              />
+              <figcaption>Lamington Road</figcaption>
+            </figure>
+
+            <figure>
+              <img
+                src="./src/img/img-4235-cropped-1548840897.jpeg"
+                alt="Dharavi Leather Market"
+                class="shopImg"
+              />
+              <figcaption>Dharavi Market</figcaption>
+            </figure>
+          </div>
+          <div class="shopDiv" id="grid">
+            <figure>
+              <img
+                src="./src/img/Lamps-Crawford-Market-Mumbai.jpeg"
+                alt="Crawford Market"
+                class="shopImg"
+              />
+              <figcaption>Crawford Market</figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./src/img/zaveri-bazar.jpeg"
+                alt="Zaveri Bazar"
+                class="shopImg"
+              />
+              <figcaption>Zaveri Bazar</figcaption>
+            </figure>
+          </div>
+          <div class="sign">
+            <h2>Sign Up! to get updates on Mumbai City</h2>
+            <button type="submit">Sign up</button>
+          </div>
+        </div>
       </section>
+      <footer>@copyright</footer>
     </main>
   </body>
 </html>
