added links to contents

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
             umbai
           </header>
           <ul>
-            <li><a href="#"></a> About</li>
-            <li><a href="#"></a> Places</li>
-            <li><a href="#"></a> Festivals</li>
-            <li><a href="#"></a> Shopping</li>
+            <li><a href="#navlink-about"> About</a></li>
+            <li><a href="#navlink-places">Places</a></li>
+            <li><a href="#navlink-festivals">Festivals</a></li>
+            <li><a href="#navlink-shopping"> Shopping</a></li>
+            <li><a href="#nav-signup" id="top-sign">Sign Up</a></li>
           </ul>
         </nav>
         <div class="title">
@@ -47,7 +48,7 @@
           </p>
         </div>
       </section>
-      <section class="sec-2">
+      <section class="sec-2" id="navlink-about">
         <div class="secDiv-2">
           <h1>About</h1>
           <hr />
@@ -74,7 +75,7 @@
           />
         </div>
       </section>
-      <section class="sec-3">
+      <section class="sec-3" id="navlink-places">
         <div class="secDiv-2">
           <h1>Must Visit Places</h1>
           <hr />
@@ -98,7 +99,12 @@
               alt="Gate of India"
               class="resize"
             />
-            <figcaption>Gateway of India</figcaption>
+            <a
+              href="https://mumbaicity.gov.in/tourist-place/gateway-of-india/"
+              target="_blank"
+            >
+              <figcaption>Gateway of India</figcaption></a
+            >
           </figure>
           <figure>
             <img
@@ -106,7 +112,11 @@
               alt="Taj Mahal Palace Hotel"
               class="resize"
             />
-            <figcaption>Taj Mahal Palace Hotel</figcaption>
+            <a
+              href="https://www.tajhotels.com/en-in/taj/taj-mahal-palace-mumbai/"
+              target="_blank"
+              ><figcaption>Taj Mahal Palace Hotel</figcaption></a
+            >
           </figure>
           <figure>
             <img
@@ -114,7 +124,9 @@
               alt="Elephanta Caves"
               class="resize"
             />
-            <figcaption>Elephanta Caves</figcaption>
+            <a href="https://whc.unesco.org/en/list/244/" target="_blank"
+              ><figcaption>Elephanta Caves</figcaption></a
+            >
           </figure>
         </div>
         <div class="secDiv-2" id="grid">
@@ -124,7 +136,11 @@
               alt="Sanjay Gandhi National Park"
               class="resize"
             />
-            <figcaption>National Park</figcaption>
+            <a
+              href="https://sgnp.maharashtra.gov.in/Site/Home/Index.aspx"
+              target="_blank"
+              ><figcaption>National Park</figcaption></a
+            >
           </figure>
           <figure>
             <img
@@ -132,7 +148,11 @@
               alt="Kotachiwadi"
               class="resize"
             />
-            <figcaption>Kotachiwadi</figcaption>
+            <a
+              href="https://www.architecturaldigest.in/story/the-history-and-stories-from-mumbais-most-beautiful-neighbourhood-khotachiwadi/"
+              target="_blank"
+              ><figcaption>Kotachiwadi</figcaption></a
+            >
           </figure>
           <figure>
             <img
@@ -140,11 +160,15 @@
               alt="Worli sea link"
               class="resize"
             />
-            <figcaption>Bandra Worli Sea Link</figcaption>
+            <a
+              href="https://en.wikipedia.org/wiki/Bandra%E2%80%93Worli_Sea_Link"
+              target="_blank"
+              ><figcaption>Bandra Worli Sea Link</figcaption></a
+            >
           </figure>
         </div>
       </section>
-      <section class="sec-4">
+      <section class="sec-4" id="navlink-festivals">
         <div class="secDiv-2">
           <h1>Festivals of Mumbai</h1>
           <hr />
@@ -211,7 +235,7 @@
           />
         </div>
       </section>
-      <section class="sec-5">
+      <section class="sec-5" id="navlink-shopping">
         <div class="secDiv-2">
           <h1>Top Street Shopping in Mumbai:</h1>
           <hr />
@@ -268,7 +292,18 @@
               <figcaption>Zaveri Bazar</figcaption>
             </figure>
           </div>
-          <div class="sign">
+          <h3>
+            Click the link to find
+            <a
+              href="https://travhelper.com/street-shopping-markets-mumbai/"
+              target="_blank"
+              style="color: rgb(18, 83, 169)"
+              >TravelHelp ✈️</a
+            >
+            for shopping
+          </h3>
+          <hr />
+          <div class="sign" id="nav-signup">
             <h2>Sign Up! to get updates on Mumbai City</h2>
             <button type="submit">Sign up</button>
           </div>
