added javascript pop ups

--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
           <hr />
           <div class="sign" id="nav-signup">
             <h2>Sign Up! to get updates on Mumbai City</h2>
-            <button type="submit">Sign up</button>
+            <button type="submit" id="clickSubmit">Sign up</button>
           </div>
         </div>
       </section>
-      <footer>@copyright</footer>
+      <footer>@copyrightByVDPK</footer>
     </main>
   </body>
 </html>
