updated media query

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li><a href="#navlink-places">Places</a></li>
             <li><a href="#navlink-festivals">Festivals</a></li>
             <li><a href="#navlink-shopping"> Shopping</a></li>
-            <li><a href="#nav-signup" id="top-sign">Sign Up</a></li>
           </ul>
+          <a href="#nav-signup" id="top-sign">Sign Up</a>
         </nav>
         <div class="title">
           <h1 class="headTitle">Mumbai City</h1>
